*** empty log message ***
git-svn-id: https://svn.apache.org/repos/asf/myfaces/trunk@165742 13f79535-47bb-0310-9956-ffa450edef68

--- a/homepage/index.html
+++ b/homepage/index.html
@@ -1,3 +1,12 @@
+<!doctype html public "-//W3C//DTD HTML 4.0 Transitional//EN">
+<html>
+<head>
+   <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
+   <meta name="Author" content="The MyFaces Project Team">
+   <meta name="description" content="MyFaces Project Homepage">
+   <meta name="keywords" content="MyFaces, JavaServer Faces">
+   <title>MyFaces Project Homepage</title>
+</head>
 <html>
 <body>
 <img src="logo.jpg"><br>
