--- a/homepage/index.html
+++ b/homepage/index.html
@@ -1,6 +1,7 @@
 <!doctype html public "-//W3C//DTD HTML 4.0 Transitional//EN">
 <html>
 <head>
+   <meta http-equiv="refresh" content="1; URL=http://www.marinschek.com/myfaces/tiki/">
    <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
    <meta name="Author" content="The MyFaces Project Team">
    <meta name="description" content="MyFaces Project Homepage">
@@ -9,9 +10,7 @@
 </head>
 <html>
 <body>
-<img src="logo.jpg"><br>
-<br>
-<h3>Homepage coming soon...</h3>
-Please go to our <a href="http://sourceforge.net/projects/myfaces/">project mainpage at sourceforge.net</a> for further information.
+<h3>Automatic redirection</h3>
+If your browser does not support automatic redirection please follow <a href="http://www.marinschek.com/myfaces/tiki/">this link</a> to get to the MyFaces Homepage.
 </body>
 </html>
