--- a/webapps/examples/web/inc/features.html
+++ b/webapps/examples/web/inc/features.html
@@ -1,123 +1,39 @@
-<h3>MyFaces Features</h3>
+<h1>MyFaces Features
+</h1><h3>What is it, that makes MyFaces different?
+</h3>
+<br/><div class="titlebar">Saving model state information in the client response</div>Traditional JSP Applications save their state information within HttpSession objects. This is an easy to use but poor approach:
+<br/><ul><li> HttpSession objects must have an expiration date (timeout) that prevents the server from running out of memory over the time. The always boring question for web admins: How long should I set the session timout?
+</li><li> Server restarting is a thrilling task: Will all objects in active sessions be serialized and restored successfully? If implementation classes have changed in the meantime, this task is likely to fail.
+</li><li> Running multiple redundant servers is a challenge. You must use cluster environments which are expensive and difficult to handle.
+</li></ul>
+<br/>MyFaces has a different approach. It makes it possible to write sophisticated applications without any use of the HttpSession. All state information of the current jsf view and (optionally) the model beans can be encoded to the client response either in the form of hidden form inputs or as query parameters in hyperlinks.
+<br/>
+<br/>MyFaces introduces a new Component &quot;UISaveState&quot; with the corresponding Tag &quot;&lt;x:save_state&gt;&quot;.
 
-<h4>Saving the full tree and model state information in the client response</h4>
+<br/>Example (see &quot;sample1.jsp&quot; of the &quot;examples&quot; web application):
+<br/><font face="courier" size="2">&nbsp;&lt;x:save_state&nbsp;id=&quot;save1&quot;&nbsp;value=&quot;#{calcForm.number1}&quot;&nbsp;/&gt;
+</font><br/><font face="courier" size="2">&nbsp;&lt;x:save_state&nbsp;id=&quot;save2&quot;&nbsp;value=&quot;#{calcForm.number2}&quot;&nbsp;/&gt;
 
-Traditional JSP Applications save their state information within HttpSession
-objects. This is an easy to use but poor approach:
-<ul>
-  <li>HttpSession objects must have an expiration date (timeout) that prevents the
-    server from running out of memory over the time. The always boring question
-    for web admins: How long should I set the session timout?
-  <li>Server restarting is a thrilling task: Will all objects in active sessions
-    be restored successfully? If implementation classes have changed this task
-    is likely to fail.
-  <li>Running multiple redundant servers is a challenge. You must use cluster
-    environments which are expensive and difficult to handle.
-</ul>
+</font><br/><font face="courier" size="2">&nbsp;&lt;x:save_state&nbsp;id=&quot;save3&quot;&nbsp;value=&quot;#{ucaseForm.text}&quot;&nbsp;/&gt;
+</font><br/>The current values of the three properties number1, number2 and text are automatically saved within the client response and get restored at the next client request.
+<br/>
+<br/>You can also save the whole bean.
+<br/>Example:
+<br/><font face="courier" size="2">&nbsp;&lt;x:save_state&nbsp;id=&quot;saveCalcForm&quot;&nbsp;value=&quot;#{calcForm}&quot;&nbsp;/&gt;
 
-MyFaces has a different approach. It makes it possible to write sophisticated
-applications without any use of the HttpSession. All state information of
-the jsf tree and (optionally the model beans) can be encoded to the client
-response in the form of query parameters and hidden inputs in forms.
+</font><br/>The whole bean automatically is saved and restored by MyFaces.
+<br/>To be able to save and restore the value of a bean property or the bean itself, it must implement the Serializable interface.
+<br/>
+<br/><div class="titlebar">Navigation Menu (HtmlPanelNavigation component and HtmlNavigationRenderer)</div>A simple navigation component to build a vertical menu structure.
+<br/>(see web\example\inc\navigation.jsp for an example)
+<br/>
+<br/><div class="titlebar">Sort header (HtmlCommandSortHeader component and HtmlSortHeaderRenderer)</div>Convenient support for writing lists, that can be (re)sorted by a click on a column header. (see web\example\simpleSortList.jsp for an example)
+<br/>
+<br/><div class="titlebar">Page layout control (HtmlLayoutRenderer)</div>Support for switchable page layout. Try the example and change the layout under &quot;Options&quot; to see the magic!
+<br/>
+<br/><div class="titlebar">File upload component (HtmlFileUploadRenderer)</div>Convenient component for uploading files to web applications.
 
-
-<h4>Support for saving model state</h4>
-
-MyFaces introduces a new Component "UISaveState" with the corresponding Tag
-"&lt;myfaces_ext:save_state&gt;".<br>
-Example (see "sample1.jsp"):
-    <code><pre>
-    ...
-    &lt;jsp:useBean id="calcForm"
-                 class="net.sourceforge.myfaces.examples.example1.CalcForm"
-                 scope="request" /&gt;
-    ...
-    &lt;f:use_faces&gt;
-        ...
-        &lt;x:save_state id="save1" modelReference="calcForm.number1" /&gt;
-        &lt;x:save_state id="save2" modelReference="calcForm.number2" /&gt;
-        &lt;x:save_state id="save3" modelReference="calcForm.result" /&gt;
-        ...</pre></code>
-The current values of the three properties number1, number2 and result get
-automatically saved within the client response and restored from the
-following client request.
-
-<p>You can also save the whole bean.<br>
-  Example:
-    <pre><code>
-    ...
-    &lt;jsp:useBean id="calcForm"
-                 class="net.sourceforge.myfaces.examples.example1.CalcForm"
-                 scope="request" /&gt;
-    ...
-    &lt;f:use_faces>
-        ...
-        &lt;x:save_state id="save1" modelReference="calcForm" /&gt;
-        ...</code></pre>
-The whole bean automatically is saved (serialized) and restored by MyFaces.
-
-<p>Keep in mind that to be able to save and restore the value of a bean property
-or the bean itself, it must either be serializable or have a type that is
-supported by a Converter (see package myfaces/converter/map).
-
-
-<h4>State Saving</h4>
-MyFaces offers 4 different state saving features:
-<ol>
-<li>"server_session"<br>
-Tree state is saved in a HTTPSession comparable to Sun's default saving with saveStateInClient = false.
-This mode is for all people that can live with HTTPSessions. We are tolerant and do not want to discriminate anybody.  ;-)
-
-<li>"client_serialized"<br>
-Tree is serialized, zipped and saved as url parameter or hidden input (comparable to Sun's saving with saveStateInClient = true but additionally zips the parameter and has also support for url parameters)
-This mode is mainly meant as a proof of concept.
-
-<li>"client_minimized"<br>
-Only those (dynamical) tree and component infos are saved, that could not otherwise be restored by parsing the JSP.
-MyFaces' main feature as we know it. Parameters are saved in "plaintext", so convenient for debugging purposes.
-
-<li>"client_minimized_zipped"<br>
-Like "client_minimal", but additionally state info is zipped (GZIP), encoded to allowed characters (Base64) and written as one query parameter or hidden form input.
-Meant for production environments, where high HTTP traffic "costs" more than zipping und unzipping. i.e. When running a fast server together with thin clients connected over Internet (and not LAN).
-</ol>
-
-<h4>ServletMapping</h4>
-MyFaces supports two methods of mapping requests to the FacesServlet:
-<ul>
-<li>Virtual path<br>
-    This is Suns method that is described in the specification. All requests to
-    "/faces/*" are mapped to the FacesServlet.
-<li>File extension<br>
-    MyFaces offers an alternative mapping. You can map all "*.jsf" requests to
-    the FacesServlet. This makes linking much easier, because you can write
-    relative urls exactly as you would do to link to another JSP. Just replace
-    the extension ".jsp" by ".jsf". You could even write a HTML design prototype
-    in "pure" JSP and then do a search-and-replace over your JSPs to run it in
-    JSF.
-</ul>
-
-
-<h4>UINavigation / NavigationRenderer (navigation and navigation_item tags)</h4>
-A simple navigation component to build a vertical menu structure.<br>
-(see web\example\inc\navigation.jsp for an example)
-
-<h4>UISortHeader / SortColumnRenderer (sortheader and sortcolumn tags)</h4>
-Convenient support for writing lists, that can be (re)sorted by a click on
-a column header.
-(see web\example\simpleSortList.jsp for an example)
-
-<h4>LayoutRenderer (page_layout, page_header, page_body and page_footer tags)</h4>
-Support for switchable page layout.
-Try the example and change the layout under "Options" to see the magic!
-
-<h4>ListRenderer supports nested HTML and JSP</h4>
-MyFaces ListRenderer does not render it's children, but rather lets child components
-and embedded HTML or JSP code the chance to render. This is achieved by our magic
-CallbackRenderer support.
-(see list examples)
-
-<h4>UIFileUpload</h4>
-Convenient component for uploading files to web applications.
-
-<h4>Tabbed pane</h4>
-A swing like tabbed pane renderer.
+<br/>
+<br/><div class="titlebar">Tabbed pane renderer (HtmlTabbedPaneRenderer)</div>A swing like tabbed pane renderer.
+<br/>(see web\example\tabbedPane.jsp)
+<br/><br/>
