--- a/src/myfaces/org/apache/myfaces/taglib/html/package.html
+++ b/src/myfaces/org/apache/myfaces/taglib/html/package.html
@@ -1,2 +1,11 @@
-<!-- TODO -->
+<html>
+<head>
+<title>Package net.sourceforge.myfaces.taglib.html</title>
+<meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
+</head>
+
+<body bgcolor="#FFFFFF">
+Basic Html Tag classes
+</body>
+</html>
   
